test/correct/multiplication2.c1

void f(int n){
	int c = 2;
	int e = c*n;
	write(e);write("  ");write(30); write("\n"); 
	n = 2+3;
}
int g(int n){
	int a = 10;
	int b = 20;
	n = a*b;
	write(n);write("  ");write(200); write("\n"); 
	return n;
}

int main() {
	int i = 15;
	f(i);
	i = g(i);
	write(i);write("  ");write(200); write("\n"); 
	return 1;
}